--- a/api_src/components/properties/message.yaml
+++ b/api_src/components/properties/message.yaml
@@ -3,6 +3,6 @@ description: >
   Description of `url`
 
 
-  See the [podcast namespace spec](https://podcastindex.org/namespace/1.0#funding) for more information.
+  See the [podcast namespace spec](https://github.com/Podcastindex-org/podcast-namespace/blob/main/docs/1.0.md#funding) for more information.
 type: string
 example: "Pragmatic on Patreon"
