--- a/api_src/components/properties/role.yaml
+++ b/api_src/components/properties/role.yaml
@@ -7,6 +7,6 @@ description: >
   [list](https://github.com/Podcastindex-org/podcast-namespace/blob/main/taxonomy.json).
 
 
-  See the [podcast namespace spec](https://podcastindex.org/namespace/1.0#person) for more information.
+  See the [podcast namespace spec](https://github.com/Podcastindex-org/podcast-namespace/blob/main/docs/1.0.md#person) for more information.
 type: string
 example: "Host"
