--- a/api_src/components/schemas/destination_v4v.yaml
+++ b/api_src/components/schemas/destination_v4v.yaml
@@ -13,3 +13,7 @@ properties:
     $ref: '../properties/split_destination.yaml'
   fee:
     $ref: '../properties/fee_destination.yaml'
+  customKey:
+    $ref: '../properties/customKey.yaml'
+  customValue:
+    $ref: '../properties/customValue.yaml'
