--- a/api_src/components/properties/img.yaml
+++ b/api_src/components/properties/img.yaml
@@ -3,7 +3,7 @@ description: >
   URL to a picture or avatar of the person.
 
 
-  See the [podcast namespace spec](https://podcastindex.org/namespace/1.0#person) for more information.
+  See the [podcast namespace spec](https://github.com/Podcastindex-org/podcast-namespace/blob/main/docs/1.0.md#person) for more information.
 type: string
 format: URL
 example: "https://engineered.network/img/people/dave-jones.jp"
