--- a/api_src/components/properties/name_person.yaml
+++ b/api_src/components/properties/name_person.yaml
@@ -3,6 +3,6 @@ description: >
   The name of the person.
 
 
-  See the [podcast namespace spec](https://podcastindex.org/namespace/1.0#person) for more information.
+  See the [podcast namespace spec](https://github.com/Podcastindex-org/podcast-namespace/blob/main/docs/1.0.md#person) for more information.
 type: string
 example: "Dave Jones"
