--- a/api_src/components/properties/url_funding.yaml
+++ b/api_src/components/properties/url_funding.yaml
@@ -3,7 +3,7 @@ description: >
   URL to site to fund the podcast
 
 
-  See the [podcast namespace spec](https://podcastindex.org/namespace/1.0#funding) for more information.
+  See the [podcast namespace spec](https://github.com/Podcastindex-org/podcast-namespace/blob/main/docs/1.0.md#funding) for more information.
 type: string
 format: URL
 example: "https://patreon.com/johnchidgey"
