--- a/docs/pi_api.yaml
+++ b/docs/pi_api.yaml
@@ -29,6 +29,7 @@ info:
     languages:
 
       - [AWS Lambda - python](https://github.com/tbowers/python-podcastindex-org-lambda)
+      - [Bash](https://github.com/suorcd/Bash-podcastindex-org-example)
       - [C#](https://github.com/ComicStrip/csharp-podcastindex-org-example)
       - [Elisp](https://github.com/sabexx/elisp-example)
       - [Flutter/Dart](https://github.com/crediblecreative/flutter-dart-podcastindex-org-example)
