Remove authorization for /hub/pubnotify
https://podcastindex.social/web/@marnix/108803990416488602

--- a/api_src/paths/hub/pubnotify.yaml
+++ b/api_src/paths/hub/pubnotify.yaml
@@ -5,6 +5,9 @@ get:
   # language=Markdown
   description: >
     Notify the index that a feed has changed
+    
+    
+    Note: No API key needed for this endpoint.
 
 
     Examples:
@@ -12,8 +15,6 @@ get:
       - https://api.podcastindex.org/api/1.0/hub/pubnotify?id=920666&pretty
       - https://api.podcastindex.org/api/1.0/hub/pubnotify?url=https://feeds.theincomparable.com/batmanuniversity&pretty
   operationId: hub/pubnotify
-  security:
-    - $ref: '../../components/security/security.yaml'
   parameters:
     - $ref: '../../components/parameters/id_feed_podcast_pi_pubnotify.yaml'
     - $ref: '../../components/parameters/url_pubnotify.yaml'
