Add `similar` argument to `search/bytitle`
Returns similar titles in response

https://podcastindex.social/@dave/108770506581594520

--- a/api_src/paths/search/bytitle.yaml
+++ b/api_src/paths/search/bytitle.yaml
@@ -21,6 +21,7 @@ get:
     - $ref: '../../components/parameters/clean.yaml'
     - $ref: '../../components/parameters/fulltext.yaml'
     - $ref: '../../components/parameters/pretty.yaml'
+    - $ref: '../../components/parameters/similar.yaml'
   responses:
     '200':
       $ref: '../../components/responses/search_byterm.yaml'
