Update `description` field to indicate source of data
https://podcastindex.social/web/@dave/108505506320347794

--- a/api_src/components/properties/description_episode.yaml
+++ b/api_src/components/properties/description_episode.yaml
@@ -1,5 +1,8 @@
   # language=Markdown
 description: >
-  The item-level description of the episode
+  The item-level description of the episode.
+  
+  
+  Uses the longer of the possible fields in the feed: `<description>`, `<itunes:summary>` and `<content:encoded>`
 type: string
 example: "Batman University is back in session! James Thomson and Nathan Alderman join Tony for a discussion of Fox\u2019s \u201cGotham.\u201d Tune in to hear our thoughts on how a half-baked comic book show was reborn into an unmissable train wreck."
