Add `episodes/live` endpoint
https://podcastindex.social/@dave/108489390613121057

--- a/api_src/root.yaml
+++ b/api_src/root.yaml
@@ -180,6 +180,8 @@ paths:
     $ref: 'paths/episodes/byid.yaml'
   '/episodes/byguid':
     $ref: 'paths/episodes/byguid.yaml'
+  '/episodes/live':
+    $ref: 'paths/episodes/live.yaml'
   '/episodes/random':
     $ref: 'paths/episodes/random.yaml'
   '/recent/episodes':
