Add artwork field to podcasts/trending endpoint
https://podcastindex.social/web/@dave/108821543394550814

--- a/api_src/components/schemas/feed_trending.yaml
+++ b/api_src/components/schemas/feed_trending.yaml
@@ -12,6 +12,8 @@ properties:
     $ref: '../properties/author.yaml'
   image:
     $ref: '../properties/image_feed.yaml'
+  artwork:
+    $ref: '../properties/artwork.yaml'
   newestItemPublishedTime:
     $ref: '../properties/newestItemPublishedTime.yaml'
   itunesId:
