--- a/docs/pi_api.yaml
+++ b/docs/pi_api.yaml
@@ -1609,6 +1609,8 @@ components:
           $ref: '#/components/schemas/author'
         image:
           $ref: '#/components/schemas/image_feed'
+        artwork:
+          $ref: '#/components/schemas/artwork'
         newestItemPublishedTime:
           $ref: '#/components/schemas/newestItemPublishedTime'
         itunesId:
