Add podcastGuid and valueCreatedOn to podcasts/bytag response

--- a/api_src/components/schemas/feed_bytag.yaml
+++ b/api_src/components/schemas/feed_bytag.yaml
@@ -56,3 +56,7 @@ properties:
     $ref: '../properties/value.yaml'
   funding:
     $ref: '../properties/funding.yaml'
+  podcastGuid:
+    $ref: '../properties/podcastGuid.yaml'
+  valueCreatedOn:
+    $ref: '../properties/valueCreatedOn.yaml'
