Add duplicateOf to podcasts/dead

--- a/api_src/components/schemas/feed_dead.yaml
+++ b/api_src/components/schemas/feed_dead.yaml
@@ -6,3 +6,5 @@ properties:
     $ref: '../properties/title_feed.yaml'
   url:
     $ref: '../properties/url_feed.yaml'
+  duplicateOf:
+    $ref: '../properties/duplicateOf.yaml'
