--- a/api_src/components/properties/feed_podcast.yaml
+++ b/api_src/components/properties/feed_podcast.yaml
@@ -43,6 +43,8 @@ properties:
     $ref: '../properties/generator.yaml'
   language:
     $ref: '../properties/language.yaml'
+  explicit:
+    $ref: '../properties/explicit_feed.yaml'
   type:
     $ref: '../properties/type.yaml'
   dead:
