--- a/api_src/components/schemas/item_podcast_random.yaml
+++ b/api_src/components/schemas/item_podcast_random.yaml
@@ -23,7 +23,7 @@ properties:
   enclosureLength:
     $ref: '../properties/enclosureLength.yaml'
   explicit:
-    $ref: '../properties/explicit.yaml'
+    $ref: '../properties/explicit_episode.yaml'
   episode:
     $ref: '../properties/episode_number.yaml'
   episodeType:
