--- a/api_src/components/schemas/item_podcast.yaml
+++ b/api_src/components/schemas/item_podcast.yaml
@@ -25,7 +25,7 @@ properties:
   duration:
     $ref: '../properties/duration.yaml'
   explicit:
-    $ref: '../properties/explicit.yaml'
+    $ref: '../properties/explicit_episode.yaml'
   episode:
     $ref: '../properties/episode_number.yaml'
   episodeType:
