--- a/api_src/components/schemas/item_search_byperson.yaml
+++ b/api_src/components/schemas/item_search_byperson.yaml
@@ -23,7 +23,7 @@ properties:
   duration:
     $ref: '../properties/duration.yaml'
   explicit:
-    $ref: '../properties/explicit.yaml'
+    $ref: '../properties/explicit_episode.yaml'
   episode:
     $ref: '../properties/episode_number.yaml'
   episodeType:
