--- a/docs/pi_api.yaml
+++ b/docs/pi_api.yaml
@@ -1858,6 +1858,10 @@ components:
           $ref: '#/components/schemas/id_feed'
         feedLanguage:
           $ref: '#/components/schemas/language'
+        feedDead:
+          $ref: '#/components/schemas/dead'
+        feedDuplicateOf:
+          $ref: '#/components/schemas/duplicateOf'
         chaptersUrl:
           $ref: '#/components/schemas/chaptersUrl'
         transcripts:
