--- a/api_src/components/properties/feeds_recent.yaml
+++ b/api_src/components/properties/feeds_recent.yaml
@@ -11,8 +11,8 @@ items:
       $ref: '../properties/url_feed.yaml'
     title:
       $ref: '../properties/title_feed.yaml'
-    newestItemPublishedTime:
-      $ref: '../properties/newestItemPublishedTime.yaml'
+    newestItemPublishTime:
+      $ref: '../properties/newestItemPublishTime.yaml'
     oldestItemPublishTime:
       $ref: '../properties/oldestItemPublishTime.yaml'
     itunesId:
