--- a/docs/pi_api.yaml
+++ b/docs/pi_api.yaml
@@ -1629,7 +1629,7 @@ components:
         Value of `medium` parameter used in request
       type: string
       example: film
-    newestItemPublishedTime:
+    newestItemPublishTime:
       description: |
         The date and time the most recent episode in the feed was published
       type: integer
@@ -1657,8 +1657,8 @@ components:
           $ref: '#/components/schemas/image_feed'
         artwork:
           $ref: '#/components/schemas/artwork'
-        newestItemPublishedTime:
-          $ref: '#/components/schemas/newestItemPublishedTime'
+        newestItemPublishTime:
+          $ref: '#/components/schemas/newestItemPublishTime'
         itunesId:
           $ref: '#/components/schemas/itunesId_feed'
         trendScore:
@@ -2172,8 +2172,8 @@ components:
             $ref: '#/components/schemas/url_feed'
           title:
             $ref: '#/components/schemas/title_feed'
-          newestItemPublishedTime:
-            $ref: '#/components/schemas/newestItemPublishedTime'
+          newestItemPublishTime:
+            $ref: '#/components/schemas/newestItemPublishTime'
           oldestItemPublishTime:
             $ref: '#/components/schemas/oldestItemPublishTime'
           itunesId:
